# maya

./: .gitignore  Taskfile.yaml  gunicorn_config.py  images_data.json  package-lock.json  processed  processed_done  processed_thumbs  pyproject.toml
api/: __init__.py
api/storage/: __init__.py  db.py  file.py
api/storage/models/: __init__.py  photo.py
app/: .firebaserc  .gitignore  __,main__.py  __init__.py  __main__.py  firebase.json  package-lock.json  package.json
app/cli/: __init__.py
app/core/: __init__.py  decorators.py  image.py  progress.py
app/exif/: __init__.py
app/face/: models.py  recognise.py  train.py
app/local/: __init__.py
app/rest/: __init__.py
app/rest/models/: __init__.py  face.py  folder.py  photo.py
app/s3/: __init__.py
app/src/: mixins.scss  styles.scss
app/src/app/: app.component.html  app.component.scss  app.component.ts  app.module.ts
app/src/app/entity/: image.ts  photo.ts
app/src/app/service/: photos.service.ts
app/src/environments/: environment.prod.ts
app/storage/: __init__.py  db.py
app/storage/models/: __init__.py  face.py  photo.py  photo_face.py
app/upload/: __init__.py
public/: index.html
sync/: __init__.py  __main__.py  cli.py  config.py
sync/exif/: __init__.py
sync/firestore/: __init__.py
sync/s3/: __init__.py
sync/upload/: __init__.py
web/: .firebaserc  Taskfile.yaml  angular.json  firebase.json  package-lock.json  package.json
web/src/: index.html  manifest.webmanifest  polyfills.ts  styles.scss  terminal.css
web/src/app/: app-routing.module.ts  app.component.html  app.component.scss  app.component.spec.ts  app.component.ts  app.module.ts
web/src/app/entity/: face.ts  (+3 more)
web/src/environments/: environment.ts
(+26 files in other folders)
