[tool.poetry]
name = "maya"
version = "0.1.0"
description = ""
authors = ["cacko"]


[[tool.poetry.source]]
name = "cacko"
secondary = true
url = "https://pypi.cacko.net/simple/"


[tool.poetry.dependencies]
python = "^3.10"
simple-photo-gallery = "^1.5.5"
bottle = "^0.12.19"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
